CKA/question_17_network_policy_3/backend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-pod
  labels:
    tier: db  
spec:
  containers:
  - name: mysql-container
    image: mysql:latest
    ports:
    - containerPort: 3306
