CKA/question_17_network_policy_3/service-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: service-app
  labels:
    tier: service
spec:
  containers:
  - name: service-app-container
    image: nginx:latest
    ports:
    - containerPort: 80
