CKA/question_17_network_policy_3/web-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-app
  labels:
    tier: web
spec:
  containers:
  - name: web-app-container
    image: nginx:latest
    ports:
    - containerPort: 80
